# rustle

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: environment.rs  lib.rs  namespaces.rs  token.rs  tokenizer.rs  xqts.rs  xquery.rs
src/eval/: arithmetic.rs  comparison.rs  environment.rs  expression.rs  helpers.rs  mod.rs  navigation.rs  piping.rs  prolog.rs  sequence_type.rs  value.rs
src/fns/: aggregates.rs  array.rs  boolean.rs  comparison.rs  context.rs  datetime.rs  decimal.rs  duration.rs  fun.rs  map.rs  math.rs  mod.rs  nodes.rs  qname.rs  sequences.rs  strings.rs  types.rs  url.rs
src/parser/: errors.rs  helper.rs  macros.rs  mod.rs  op.rs  parse_duration.rs  parse_expr.rs  parse_literal.rs  parse_names.rs  parse_xml.rs
src/serialization/: mod.rs  to_string.rs  to_xml.rs
src/tests/: mod.rs
src/tree/: dln.rs  in_memory.rs  mod.rs
src/value/: mod.rs  qname.rs
src/values/: binary.rs  boolean.rs  date_time.rs  date_time_utils.rs  mod.rs  numbers.rs  qname.rs  string_to.rs  strings.rs  time.rs  value.rs
