[package]
name = "rustle"
version = "0.1.0"
authors = ["Dmitriy Shabanov <shabanovd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"

#fast-float = "0.2"
#bigdecimal = "0.3.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"

nom = "7.0"
xmlparser = "0.13.3"
quick-xml = "0.22.0"
