[package]
name = "rustle"
version = "0.1.0"
authors = ["Dmitriy Shabanov <shabanovd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"

bigdecimal = "0.3.0"
ordered-float = "2.0"
libmath = "0.2.1"

nom = "7.0"
xmlparser = "0.13.3"
quick-xml = "0.22.0"
