[package]
name = "rustle"
version = "0.3.0"
authors = ["Dmitriy Shabanov <shabanovd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

strum = "0.21"
strum_macros = "0.21"

#url = "2.2.2" # base url always required
uriparse = "0.6.3"

base64 = "0.13.0"
hex = "0.4.3"
#oxilangtag = "0.1.2"

unicode-normalization = "0.1.19"

#lexical-write-float = "0.8.2"
bigdecimal = "0.3.0"
ordered-float = "2.0"
libmath = "0.2.1"

chrono = "0.4.19"
num-integer = "0.1.44"

lazy_static = "1.4.0"
dyn-clone = "1.0.4"

nom = "7.1.0"
xmlparser = "0.13.3"
quick-xml = "0.22.0"

#bytes = "1.1.0"
linked-hash-map = "0.5.4"